Generate header dynamically
